--- a/index.html
+++ b/index.html
@@ -14,15 +14,11 @@
       <!-- ***********************  ABOUT / PROFILE  *********************** -->
       <header>
         <div class="content-wrap">
-          <h1>Your Name</h1>
+          <h1>Liting Zhou</h1>
           <h2>Job title or tagline</h2>
 
           <p>
-            Add your profile copy here. Add more paragraphs or links as needed.
-            Here is some dummy text: Lorem ipsum dolor sit amet, consectetur
-            adipiscing elit. Praesent bibendum, diam ut gravida efficitur, risus
-            neque scelerisque erat, ut rhoncus erat odio ac justo. Nunc
-            scelerisque vestibulum augue, sit amet hendrerit ante.
+            The rest is not finished yet!!!
           </p>
           <p>Add another paragraph if needed.</p>
         </div>
